# PSCP_IT_ticket

./: .gitignore  Makefile  README.md  init.py
src/: docker-compose.yml
src/requirement/database/: Dockerfile
src/requirement/database/tools/: entry.sh
src/requirement/main/: Dockerfile
src/requirement/main/it_ticket/: pyproject.toml
src/requirement/main/it_ticket/it_ticket/: __init__.py  embed.py  main.py  tdb.py
src/requirement/main/it_ticket/mongo/: lib_select.py
src/requirement/main/tools/: entry.sh
